Corrected spacing issue for 3 column cat template.

--- a/_chess_styles.css
+++ b/_chess_styles.css
@@ -1526,7 +1526,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#937449', end
 	clear: none;
     color: #D4511F;
     display: block;
-    margin-left: 25px;
+    margin-left: 15px;
     text-align: left;
     width: 95px;
 }
